# CNN-for-MPID

./: Final_Report_Optuna.txt  README.md  app.js  best_mpid_model.pth  index.html  run_server.py  style.css  train_mpid_100K_optuna.py  training_log.txt
geant4kod1/: CMakeLists.txt  main.cc
geant4kod1/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorResponse.hh  EventAction.hh  EventInformation.hh  ImageWriter.hh  LArHit.hh  LArSensitiveDetector.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  SparseImageWriter.hh  SteppingAction.hh  WireImageWriter.hh
geant4kod1/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorResponse.cc  EventAction.cc  EventInformation.cc  ImageWriter.cc  LArHit.cc  LArSensitiveDetector.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  SparseImageWriter.cc  SteppingAction.cc  WireImageWriter.cc
